add mod for 10x6 inventory

--- a/src/index.htm
+++ b/src/index.htm
@@ -44,6 +44,8 @@
       </ul>
     </div>
 
+    <p class="bad-data-warning">* Always make a backup of your character before trying out these mods</p>
+
     <div class="centered">
       <button class="btn btn-primary" onclick="filedownload_click()">
         Generate & Download zip file
@@ -239,6 +241,18 @@
         <div class="mod-desc">
           <p>Allow hirelings to equip boots, belts, gloves, one ring and amulet</p>
           <img class="mod-screenshot" src='images/full_equip_hireling.jpg'>
+          <p class="bad-data-warning">* Be sure to remove the extra equipment and save your character before removing this mod to prevent bad data</p>
+        </div>
+      </div>
+
+      <div class="mod-option" id="10x6inventory">
+        <div class="col1">
+          <input type="checkbox" checked='true' />
+        </div>
+        <div class="mod-desc">
+          <p>Increases the inventory size from 10x4 to 10x6</p>
+          <img class="mod-screenshot" src='images/10x6_inventory.jpg'>
+          <p class="bad-data-warning">* Be sure to remove the extra items from the bottom two rows and save your character before removing this mod to prevent bad data</p>
         </div>
       </div>
 
@@ -249,6 +263,7 @@
         <div class="mod-desc">
           <p>Increases the Horadric cube size from 3x4 to 10x8</p>
           <img class="mod-screenshot" src='images/10x8_cube.jpg'>
+          <p class="bad-data-warning">* Be sure to empty the Horadric cube and save your character before removing this mod to prevent bad data</p>
         </div>
       </div>
 
@@ -259,6 +274,7 @@
         <div class="mod-desc">
           <p>Increases the stash size from 6x8 to 10x10</p>
           <img class="mod-screenshot" src='images/10x10_stash.jpg'>
+          <p class="bad-data-warning">* Be sure to remove the items in the enlarged stash and save your character before removing this mod to prevent bad data</p>
         </div>
       </div>
 
