add warning when javascript is not available

--- a/src/index.htm
+++ b/src/index.htm
@@ -33,6 +33,10 @@
     <br/>
 
     <div>
+      <noscript>
+        <h3 class="no-js-warning">Your browser does not support JavaScript!</h3>
+        <h3 class="no-js-warning">This page will not work without javascript enabled</h3>
+      </noscript>
       <p> Simple steps to create your own mod for Diablo 2 (1.10+):</p>
       <ul>
         <li>Select the features you want below</li>
