add keywords, ld+json and reformat HTML

--- a/src/index.htm
+++ b/src/index.htm
@@ -18,6 +18,15 @@
   <meta name="title" content="Custom Diablo 2 mod maker">
   <meta name="description" content="Allows you to choose mods to apply to Diablo 2">
   <meta name="author" content="sajonoso@users.noreply.github.com">
+  <meta name="keywords" content="Diablo 2,Diablo II,Lord of Destruction,mods,diy,expansion pack,extension,addon,enhancement,plugins,custom,game">
+
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@name": "Diablo 2 DIY custom mod maker",
+      "@url": "https://sajonoso.github.io/d2mods/"
+    }
+  </script>
 
   <link rel='stylesheet' href='libs/bootstrap-reboot.min.css'>
   <link rel='stylesheet' href='libs/bootstrap.min.css'>
@@ -30,7 +39,7 @@
       <img id="test" class="test1" src='images/title.png'>
     </div>
 
-    <br/>
+    <br />
 
     <div>
       <noscript>
@@ -56,7 +65,7 @@
       </button>
     </div>
 
-    <br/>
+    <br />
 
     <div class="mod-options">
       <h3>Select your custom modifications</h3>
@@ -94,7 +103,7 @@
               <option value="6">16</option>
             </select>
 
-            <br/>A new cube recipe will be added so you can access this skill if you are not an Amazon
+            <br />A new cube recipe will be added so you can access this skill if you are not an Amazon
           </p>
           <ul>
             <li>1 charm + 1 spear -> same charm (+5 valkyrie)</li>
@@ -109,18 +118,18 @@
         </div>
         <div class="mod-desc">
           <p>Replaces an existing skill to summon an extra sidekick for your hero.
-          <br/>Like the iron golem, you will need to choose a metal item to summon your sidekick.
-          <br/>Your side kick will inherit the properties of the item.
-          <br/>Unlike the iron golem, your sidekick will be lost when you exit the game
-          <br/>(TIP: do not use expensive items when creating your sidekick)
-          <br/>In addition, the sidekick will have the following properties: (where clvl = your character level)</p>
+            <br />Like the iron golem, you will need to choose a metal item to summon your sidekick.
+            <br />Your side kick will inherit the properties of the item.
+            <br />Unlike the iron golem, your sidekick will be lost when you exit the game
+            <br />(TIP: do not use expensive items when creating your sidekick)
+            <br />In addition, the sidekick will have the following properties: (where clvl = your character level)</p>
           <ul>
             <li><b>Life:</b> Same as character</li>
             <li><b>Defense:</b> increases with character defense level</li>
             <li><b>Attack Rating:</b> increases with character attack rating</li>
             <li><b>Item normal damage:</b> Maximum damage of non missile weapon currently used</li>
             <li><b>Crushing blow:</b> 25% chance</li>
-            <li>Natural Resistance (max level 20)  level = 1+(clvl/3) </li>
+            <li>Natural Resistance (max level 20) level = 1+(clvl/3) </li>
           </ul>
 
           <p>A new cube recipe will be added so you can access this skill
@@ -137,24 +146,24 @@
               <img src='images/skill_findpotion.jpg'>
             </label>
             <div class="skill-desc"> Find Potion
-              <br/> (Barbarian skill)
-              <br/> Level 7 Charm</div>
+              <br /> (Barbarian skill)
+              <br /> Level 7 Charm</div>
 
             <input name="sidekick_skill" type="radio" id="tabskill-2" class="input" value="grimward" />
             <label for="tabskill-2" class="label">
               <img src='images/skill_grimward.jpg'>
             </label>
             <div class="skill-desc"> Grim Ward
-              <br/> (Barbarian skill)
-              <br/> Level 30 Charm</div>
+              <br /> (Barbarian skill)
+              <br /> Level 30 Charm</div>
 
             <input name="sidekick_skill" type="radio" id="tabskill-3" class="input" value="sacrifice" />
             <label for="tabskill-3" class="label">
               <img src='images/skill_sacrifice.jpg'>
             </label>
             <div class="skill-desc"> Sacrifice
-              <br/> (Paladin skill)
-              <br/> Level 7 Charm</div>
+              <br /> (Paladin skill)
+              <br /> Level 7 Charm</div>
           </div>
 
 
@@ -245,7 +254,8 @@
         <div class="mod-desc">
           <p>Allow hirelings to equip boots, belts, gloves, one ring and amulet</p>
           <img class="mod-screenshot" src='images/full_equip_hireling.jpg'>
-          <p class="bad-data-warning">* Be sure to remove the extra equipment and save your character before removing this mod to prevent bad data</p>
+          <p class="bad-data-warning">* Be sure to remove the extra equipment and save your character before removing
+            this mod to prevent bad data</p>
         </div>
       </div>
 
@@ -256,7 +266,8 @@
         <div class="mod-desc">
           <p>Increases the inventory size from 10x4 to 10x6</p>
           <img class="mod-screenshot" src='images/10x6_inventory.jpg'>
-          <p class="bad-data-warning">* Be sure to remove the extra items from the bottom two rows and save your character before removing this mod to prevent bad data</p>
+          <p class="bad-data-warning">* Be sure to remove the extra items from the bottom two rows and save your
+            character before removing this mod to prevent bad data</p>
         </div>
       </div>
 
@@ -267,7 +278,8 @@
         <div class="mod-desc">
           <p>Increases the Horadric cube size from 3x4 to 10x8</p>
           <img class="mod-screenshot" src='images/10x8_cube.jpg'>
-          <p class="bad-data-warning">* Be sure to empty the Horadric cube and save your character before removing this mod to prevent bad data</p>
+          <p class="bad-data-warning">* Be sure to empty the Horadric cube and save your character before removing this
+            mod to prevent bad data</p>
         </div>
       </div>
 
@@ -278,7 +290,8 @@
         <div class="mod-desc">
           <p>Increases the stash size from 6x8 to 10x10</p>
           <img class="mod-screenshot" src='images/10x10_stash.jpg'>
-          <p class="bad-data-warning">* Be sure to remove the items in the enlarged stash and save your character before removing this mod to prevent bad data</p>
+          <p class="bad-data-warning">* Be sure to remove the items in the enlarged stash and save your character
+            before removing this mod to prevent bad data</p>
         </div>
       </div>
 
