update summon side kick via added skill

--- a/src/index.htm
+++ b/src/index.htm
@@ -112,7 +112,7 @@
         </div>
       </div>
 
-      <div class="mod-option" id="summon_barb">
+      <div class="mod-option" id="side_kick">
         <div class="col1">
           <input type="checkbox" checked='true' />
         </div>
@@ -129,14 +129,9 @@
             <li><b>Attack Rating:</b> increases with character attack rating</li>
             <li><b>Item normal damage:</b> Maximum damage of non missile weapon currently used</li>
             <li><b>Crushing blow:</b> 25% chance</li>
-            <li>Natural Resistance (max level 20) level = 1+(clvl/3) </li>
+            <li><b>Natural Resistance:</b> level = 1+(clvl/3) &nbsp; &nbsp; (max level 20)</li>
           </ul>
 
-          <p>A new cube recipe will be added so you can access this skill
-          </p>
-          <ul>
-            <li>1 key + 1 boots -> small charm (+1 to chosen skill)</li>
-          </ul>
           <p>
             <b>Choose the skill to replace</b>
           </p>
@@ -147,7 +142,7 @@
             </label>
             <div class="skill-desc"> Find Potion
               <br /> (Barbarian skill)
-              <br /> Level 7 Charm</div>
+            </div>
 
             <input name="sidekick_skill" type="radio" id="tabskill-2" class="input" value="grimward" />
             <label for="tabskill-2" class="label">
@@ -155,7 +150,7 @@
             </label>
             <div class="skill-desc"> Grim Ward
               <br /> (Barbarian skill)
-              <br /> Level 30 Charm</div>
+            </div>
 
             <input name="sidekick_skill" type="radio" id="tabskill-3" class="input" value="sacrifice" />
             <label for="tabskill-3" class="label">
@@ -163,7 +158,7 @@
             </label>
             <div class="skill-desc"> Sacrifice
               <br /> (Paladin skill)
-              <br /> Level 7 Charm</div>
+            </div>
           </div>
 
 
