refactor modder code

--- a/src/index.htm
+++ b/src/index.htm
@@ -99,8 +99,8 @@
             <select id="multivalkyrie_limit">
               <option value="2" selected>2</option>
               <option value="4">4</option>
-              <option value="5">8</option>
-              <option value="6">16</option>
+              <option value="8">8</option>
+              <option value="16">16</option>
             </select>
 
             <br />A new cube recipe will be added so you can access this skill if you are not an Amazon
@@ -109,6 +109,17 @@
             <li>1 charm + 1 spear -> same charm (+5 valkyrie)</li>
           </ul>
           <img class="mod-screenshot" src='images/multi_valkyrie.jpg'>
+        </div>
+      </div>
+
+      <div class="mod-option" id="melee_ironwolf">
+        <div class="col1">
+          <input type="checkbox" checked='true' />
+        </div>
+        <div class="mod-desc">
+          <p>
+            Turns iron wolf type hireling or summoned side kick into a melee fighter
+          </p>
         </div>
       </div>
 
