--- a/src/index.htm
+++ b/src/index.htm
@@ -178,7 +178,7 @@
           </p>
           <!-- Purely CSS tabs -->
           <div class="tabselector type">
-            <input name="sidekick_type" type="radio" id="tabtype-1" class="input" checked="checked" value="barb" />
+            <input name="sidekick_type" type="radio" id="tabtype-1" class="input" value="barb" />
             <label for="tabtype-1" class="label">
               <img src='images/icon_barb.jpg'>
             </label>
@@ -204,7 +204,7 @@
               </ul>
             </div>
 
-            <input name="sidekick_type" type="radio" id="tabtype-3" class="input" value="rogue" />
+            <input name="sidekick_type" type="radio" id="tabtype-3" class="input" value="rogue" checked="checked" />
             <label for="tabtype-3" class="label">
               <img src='images/icon_rogue.jpg'>
             </label>
@@ -218,6 +218,120 @@
             </div>
 
             <input name="sidekick_type" type="radio" id="tabtype-4" class="input" value="mage" />
+            <label for="tabtype-4" class="label">
+              <img src='images/icon_mage.jpg'>
+            </label>
+            <div class="panel">
+              <h4>Mage features</h4>
+              <ul>
+                <li>50% faster block rate</li>
+                <li>Randomly casts amplify damage</li>
+                <li style="visibility:hidden"></li>
+                <!-- <li>Cold enchanted: +cold damage, +50% cold resistance, and releases a Frost Nova upon death</li> -->
+              </ul>
+            </div>
+
+          </div>
+          <!-- Purely CSS tabs -->
+        </div>
+      </div>
+
+      <!-- SECOND SIDE KICK -->
+      <div class="mod-option" id="side_kick2">
+        <div class="col1">
+          <input type="checkbox" checked='true' />
+        </div>
+        <div class="mod-desc">
+          <p>Replaces an existing skill to summon an extra sidekick for your hero.
+            <br />Like the iron golem, you will need to choose a metal item to summon your sidekick.
+            <br />Your side kick will inherit the properties of the item.
+            <br />Unlike the iron golem, your sidekick will be lost when you exit the game
+            <br />(TIP: do not use expensive items when creating your sidekick)
+            <br />In addition, the sidekick will have the following properties: (where clvl = your character level)</p>
+          <ul>
+            <li><b>Life:</b> Same as character</li>
+            <li><b>Defense:</b> increases with character defense level</li>
+            <li><b>Attack Rating:</b> increases with character attack rating</li>
+            <li><b>Item normal damage:</b> Maximum damage of non missile weapon currently used</li>
+            <li><b>Crushing blow:</b> 25% chance</li>
+            <li><b>Natural Resistance:</b> level = 1+(clvl/3) &nbsp; &nbsp; (max level 20)</li>
+          </ul>
+
+          <p>
+            <b>Choose the skill to replace</b>
+          </p>
+          <div class="tabselector skill">
+            <input name="sidekick2_skill" type="radio" id="tabskill-1" class="input" value="findpotion" />
+            <label for="tabskill-1" class="label">
+              <img src='images/skill_findpotion.jpg'>
+            </label>
+            <div class="skill-desc"> Find Potion
+              <br /> (Barbarian skill)
+            </div>
+
+            <input name="sidekick2_skill" type="radio" id="tabskill-2" class="input" value="grimward" checked="checked" />
+            <label for="tabskill-2" class="label">
+              <img src='images/skill_grimward.jpg'>
+            </label>
+            <div class="skill-desc"> Grim Ward
+              <br /> (Barbarian skill)
+            </div>
+
+            <input name="sidekick2_skill" type="radio" id="tabskill-3" class="input" value="sacrifice" />
+            <label for="tabskill-3" class="label">
+              <img src='images/skill_sacrifice.jpg'>
+            </label>
+            <div class="skill-desc"> Sacrifice
+              <br /> (Paladin skill)
+            </div>
+          </div>
+
+
+          <p>
+            <b>Choose your side kick</b>
+          </p>
+          <!-- Purely CSS tabs -->
+          <div class="tabselector type">
+            <input name="sidekick2_type" type="radio" id="tabtype-1" class="input" value="barb" />
+            <label for="tabtype-1" class="label">
+              <img src='images/icon_barb.jpg'>
+            </label>
+            <div class="panel">
+              <h4>Barbarian features</h4>
+              <ul>
+                <li>Adds elemental damage to attacks (Spectral hit)</li>
+                <li style="visibility:hidden"></li>
+                <li style="visibility:hidden"></li>
+              </ul>
+            </div>
+
+            <input name="sidekick2_type" type="radio" id="tabtype-2" class="input" value="guard" />
+            <label for="tabtype-2" class="label">
+              <img src='images/icon_guard.jpg'>
+            </label>
+            <div class="panel">
+              <h4>Guard features</h4>
+              <ul>
+                <li>Level 1 Sanctuary Aura</li>
+                <li style="visibility:hidden"></li>
+                <li style="visibility:hidden"></li>
+              </ul>
+            </div>
+
+            <input name="sidekick2_type" type="radio" id="tabtype-3" class="input" value="rogue" />
+            <label for="tabtype-3" class="label">
+              <img src='images/icon_rogue.jpg'>
+            </label>
+            <div class="panel">
+              <h4>Rogue features</h4>
+              <ul>
+                <li>Shoots multiple arrows (Multishot)</li>
+                <li>Level 5 Pierce</li>
+                <li style="visibility:hidden"></li>
+              </ul>
+            </div>
+
+            <input name="sidekick2_type" type="radio" id="tabtype-4" class="input" value="mage" checked="checked" />
             <label for="tabtype-4" class="label">
               <img src='images/icon_mage.jpg'>
             </label>
