--- a/src/index.htm
+++ b/src/index.htm
@@ -123,7 +123,7 @@
         </div>
       </div>
 
-      <div class="mod-option" id="side_kick">
+      <div class="mod-option" id="side_kick1">
         <div class="col1">
           <input type="checkbox" checked='true' />
         </div>
@@ -147,7 +147,7 @@
             <b>Choose the skill to replace</b>
           </p>
           <div class="tabselector skill">
-            <input name="sidekick_skill" type="radio" id="tabskill-1" class="input" value="findpotion" checked="checked" />
+            <input name="sidekick1_skill" type="radio" id="tabskill-1" class="input" value="findpotion" checked="checked" />
             <label for="tabskill-1" class="label">
               <img src='images/skill_findpotion.jpg'>
             </label>
@@ -155,7 +155,7 @@
               <br /> (Barbarian skill)
             </div>
 
-            <input name="sidekick_skill" type="radio" id="tabskill-2" class="input" value="grimward" />
+            <input name="sidekick1_skill" type="radio" id="tabskill-2" class="input" value="grimward" />
             <label for="tabskill-2" class="label">
               <img src='images/skill_grimward.jpg'>
             </label>
@@ -163,7 +163,7 @@
               <br /> (Barbarian skill)
             </div>
 
-            <input name="sidekick_skill" type="radio" id="tabskill-3" class="input" value="sacrifice" />
+            <input name="sidekick1_skill" type="radio" id="tabskill-3" class="input" value="sacrifice" />
             <label for="tabskill-3" class="label">
               <img src='images/skill_sacrifice.jpg'>
             </label>
@@ -178,56 +178,55 @@
           </p>
           <!-- Purely CSS tabs -->
           <div class="tabselector type">
-            <input name="sidekick_type" type="radio" id="tabtype-1" class="input" value="barb" />
+            <input name="sidekick1_type" type="radio" id="tabtype-1" class="input" value="barb" />
             <label for="tabtype-1" class="label">
               <img src='images/icon_barb.jpg'>
             </label>
             <div class="panel">
               <h4>Barbarian features</h4>
               <ul>
-                <li>Adds elemental damage to attacks (Spectral hit)</li>
-                <li style="visibility:hidden"></li>
+                <li>Life steal</li>
+                <li>Sword mastery level 1</li>
                 <li style="visibility:hidden"></li>
               </ul>
             </div>
 
-            <input name="sidekick_type" type="radio" id="tabtype-2" class="input" value="guard" />
+            <input name="sidekick1_type" type="radio" id="tabtype-2" class="input" value="guard" />
             <label for="tabtype-2" class="label">
               <img src='images/icon_guard.jpg'>
             </label>
             <div class="panel">
               <h4>Guard features</h4>
               <ul>
+                <li>Faster attack rate</li>
+                <li>Level 6 Jab</li>
                 <li>Level 1 Sanctuary Aura</li>
-                <li style="visibility:hidden"></li>
-                <li style="visibility:hidden"></li>
               </ul>
             </div>
 
-            <input name="sidekick_type" type="radio" id="tabtype-3" class="input" value="rogue" checked="checked" />
+            <input name="sidekick1_type" type="radio" id="tabtype-3" class="input" value="rogue" checked="checked" />
             <label for="tabtype-3" class="label">
               <img src='images/icon_rogue.jpg'>
             </label>
             <div class="panel">
               <h4>Rogue features</h4>
               <ul>
+                <li>Faster attack rate</li>
+                <li>Level 1 Pierce</li>
                 <li>Shoots multiple arrows (Multishot)</li>
-                <li>Level 5 Pierce</li>
-                <li style="visibility:hidden"></li>
               </ul>
             </div>
 
-            <input name="sidekick_type" type="radio" id="tabtype-4" class="input" value="mage" />
+            <input name="sidekick1_type" type="radio" id="tabtype-4" class="input" value="mage" />
             <label for="tabtype-4" class="label">
               <img src='images/icon_mage.jpg'>
             </label>
             <div class="panel">
               <h4>Mage features</h4>
               <ul>
-                <li>50% faster block rate</li>
-                <li>Randomly casts amplify damage</li>
-                <li style="visibility:hidden"></li>
-                <!-- <li>Cold enchanted: +cold damage, +50% cold resistance, and releases a Frost Nova upon death</li> -->
+                <li>Faster attack rate</li>
+                <li>Spectral hit</li>
+                <li>Sword mastery level 1</li>
               </ul>
             </div>
 
@@ -243,42 +242,39 @@
         </div>
         <div class="mod-desc">
           <p>Replaces an existing skill to summon an extra sidekick for your hero.
-            <br />Like the iron golem, you will need to choose a metal item to summon your sidekick.
-            <br />Your side kick will inherit the properties of the item.
-            <br />Unlike the iron golem, your sidekick will be lost when you exit the game
-            <br />(TIP: do not use expensive items when creating your sidekick)
-            <br />In addition, the sidekick will have the following properties: (where clvl = your character level)</p>
+            <br />The sidekick will have the following properties: (where clvl = your character level)</p>
           <ul>
-            <li><b>Life:</b> Same as character</li>
+            <li><b>Life:</b> Character life x 2</li>
             <li><b>Defense:</b> increases with character defense level</li>
             <li><b>Attack Rating:</b> increases with character attack rating</li>
             <li><b>Item normal damage:</b> Maximum damage of non missile weapon currently used</li>
             <li><b>Crushing blow:</b> 25% chance</li>
-            <li><b>Natural Resistance:</b> level = 1+(clvl/3) &nbsp; &nbsp; (max level 20)</li>
+            <li><b>Natural Resistance (max level 20):</b> level = 1+(clvl/3)</li>
+            <li><b>Increased speed:</b> level 1</li>
           </ul>
 
           <p>
             <b>Choose the skill to replace</b>
           </p>
           <div class="tabselector skill">
-            <input name="sidekick2_skill" type="radio" id="tabskill-1" class="input" value="findpotion" />
-            <label for="tabskill-1" class="label">
+            <input name="sidekick2_skill" type="radio" id="tabskill-1b" class="input" value="findpotion" />
+            <label for="tabskill-1b" class="label">
               <img src='images/skill_findpotion.jpg'>
             </label>
             <div class="skill-desc"> Find Potion
               <br /> (Barbarian skill)
             </div>
 
-            <input name="sidekick2_skill" type="radio" id="tabskill-2" class="input" value="grimward" checked="checked" />
-            <label for="tabskill-2" class="label">
+            <input name="sidekick2_skill" type="radio" id="tabskill-2b" class="input" value="grimward" checked="checked" />
+            <label for="tabskill-2b" class="label">
               <img src='images/skill_grimward.jpg'>
             </label>
             <div class="skill-desc"> Grim Ward
               <br /> (Barbarian skill)
             </div>
 
-            <input name="sidekick2_skill" type="radio" id="tabskill-3" class="input" value="sacrifice" />
-            <label for="tabskill-3" class="label">
+            <input name="sidekick2_skill" type="radio" id="tabskill-3b" class="input" value="sacrifice" />
+            <label for="tabskill-3b" class="label">
               <img src='images/skill_sacrifice.jpg'>
             </label>
             <div class="skill-desc"> Sacrifice
@@ -288,60 +284,59 @@
 
 
           <p>
-            <b>Choose your side kick</b>
+            <b>Choose your second side kick</b>
           </p>
           <!-- Purely CSS tabs -->
           <div class="tabselector type">
-            <input name="sidekick2_type" type="radio" id="tabtype-1" class="input" value="barb" />
-            <label for="tabtype-1" class="label">
+            <input name="sidekick2_type" type="radio" id="tabtype-1b" class="input" value="barb" />
+            <label for="tabtype-1b" class="label">
               <img src='images/icon_barb.jpg'>
             </label>
             <div class="panel">
               <h4>Barbarian features</h4>
               <ul>
-                <li>Adds elemental damage to attacks (Spectral hit)</li>
-                <li style="visibility:hidden"></li>
+                <li>Life steal</li>
+                <li>Sword mastery level 1</li>
                 <li style="visibility:hidden"></li>
               </ul>
             </div>
 
-            <input name="sidekick2_type" type="radio" id="tabtype-2" class="input" value="guard" />
-            <label for="tabtype-2" class="label">
+            <input name="sidekick2_type" type="radio" id="tabtype-2b" class="input" value="guard" />
+            <label for="tabtype-2b" class="label">
               <img src='images/icon_guard.jpg'>
             </label>
             <div class="panel">
               <h4>Guard features</h4>
               <ul>
+                <li>Faster attack rate</li>
+                <li>Level 6 Jab</li>
                 <li>Level 1 Sanctuary Aura</li>
-                <li style="visibility:hidden"></li>
-                <li style="visibility:hidden"></li>
               </ul>
             </div>
 
-            <input name="sidekick2_type" type="radio" id="tabtype-3" class="input" value="rogue" />
-            <label for="tabtype-3" class="label">
+            <input name="sidekick2_type" type="radio" id="tabtype-3b" class="input" value="rogue" />
+            <label for="tabtype-3b" class="label">
               <img src='images/icon_rogue.jpg'>
             </label>
             <div class="panel">
               <h4>Rogue features</h4>
               <ul>
+                <li>Faster attack rate</li>
+                <li>Level 1 Pierce</li>
                 <li>Shoots multiple arrows (Multishot)</li>
-                <li>Level 5 Pierce</li>
-                <li style="visibility:hidden"></li>
               </ul>
             </div>
 
-            <input name="sidekick2_type" type="radio" id="tabtype-4" class="input" value="mage" checked="checked" />
-            <label for="tabtype-4" class="label">
+            <input name="sidekick2_type" type="radio" id="tabtype-4b" class="input" value="mage" checked="checked" />
+            <label for="tabtype-4b" class="label">
               <img src='images/icon_mage.jpg'>
             </label>
             <div class="panel">
               <h4>Mage features</h4>
               <ul>
-                <li>50% faster block rate</li>
-                <li>Randomly casts amplify damage</li>
-                <li style="visibility:hidden"></li>
-                <!-- <li>Cold enchanted: +cold damage, +50% cold resistance, and releases a Frost Nova upon death</li> -->
+                <li>Faster attack rate</li>
+                <li>Spectral hit</li>
+                <li>Sword mastery level 1</li>
               </ul>
             </div>
 
