add cube recipe to create random rare items and ability to duplicate items

--- a/src/index.htm
+++ b/src/index.htm
@@ -361,6 +361,27 @@
         </div>
       </div>
 
+      <div class="mod-option" id="item_randomizer">
+        <div class="col1">
+          <input type="checkbox" checked='true' />
+        </div>
+        <div class="mod-desc">
+          <p>Adds extra Horadric Cube recipes.</p>
+          <ul>
+            <li>Convert items to rare type with random statistics</li>
+            <li>Duplicate items</li>
+          </ul>
+          <p>The recipes are:</p>
+          <ul>
+            <li>1 weapon + 1 identify Scroll + 1 thawing potion -> rare weapon of same type</li>
+            <li>1 armour + 1 identify Scroll + 1 thawing potion -> rare armour of same type (also works on rings and amulets)</li>
+            <li>1 weapon + 2 health potions -> duplicate item</li>
+            <li>1 armour + 2 health potions -> duplicate item</li>
+            <li>1 charm + 2 health potions -> duplicate item</li>
+          </ul>
+        </div>
+      </div>
+
       <!-- Options that most people would have enabled -->
       <div class="mod-option" id="full_merc">
         <div class="col1">
