add mob density mod

--- a/src/index.htm
+++ b/src/index.htm
@@ -431,6 +431,22 @@
         </div>
       </div>
 
+      <div class="mod-option" id="mob_density">
+        <div class="col1">
+          <input type="checkbox" />
+        </div>
+        <div class="mod-desc">
+          <p>Increases the mob density in normal and nightmare levels: 
+          <select id="mob_density_multiplier">
+            <option value="1" selected>x 1</option>
+            <option value="2">x 2</option>
+            <option value="3">x 3</option>
+            <option value="4">x 4</option>
+          </select>
+          </p>
+        </div>
+      </div>
+
       <div class="mod-option" id="add_start_items">
         <div class="col1">
           <input type="checkbox" checked='true' />
