add help text and regenerate website

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,7 @@
     <p class="bad-data-warning">* Always make a backup of your character before trying out these mods</p>
 
     <div class="centered">
+      <p class="show-d2r bad-data-warning">NOTE: generating zip file for D2R could be very slow. Allow about 50 seconds for file save dialog to show</p>
       <button class="btn btn-primary" onclick="filedownload_click()">
         <div class="busy-off">Generate & Download zip file</div>
         <div class="busy-on">
